# Advent-of-Code

./: .gitignore  CMakeLists.txt  README.md
2024/: CMakeLists.txt
2024/day_01/: CMakeLists.txt  main.c
2024/day_02/: CMakeLists.txt  main.c
2024/day_03/: CMakeLists.txt  main.c
2024/day_04/: CMakeLists.txt  main.c
2024/day_05/: CMakeLists.txt  main.c
2024/day_06/: CMakeLists.txt  main.c
2024/day_07/: CMakeLists.txt  main.c
